tests/snapshots/formats__astc__sips.astc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ sips.astc — 8×8, 4×4 blocks (8.00 bpp)  [0x0+0x50]
    Magic: 0x5ca1ab13  [0x0+0x4]
    Block width: 4  [0x4+0x1]
    Block height: 4  [0x5+0x1]
    Block depth: 1  [0x6+0x1]
    Width: 8  [0x7+0x3]
    Height: 8  [0xa+0x3]
    Depth: 1  [0xd+0x3]
    Blocks — 4 128-bit blocks  [0x10+0x40]
